ifcc-test-output/tests-testfiles-9_add_mul_sub/gcc-compile.txt
input.c: In function ‘main’:
input.c:3:5: error: expected ‘,’ or ‘;’ before ‘return’
    3 |     return a;
      |     ^~~~~~

exit status: 1
